--- a/Platforma_CDN/package.json
+++ b/Platforma_CDN/package.json
@@ -1,13 +1,18 @@
 {
   "dependencies": {
+    "axios": "^1.6.2",
     "cache-manager": "^5.2.4",
     "cache-manager-fs": "^1.0.12",
     "cache-manager-fs-binary": "^1.0.4",
+    "expres": "^0.0.5",
+    "express": "^4.18.2",
     "flat-cache": "^3.2.0",
     "http": "^0.0.1-security",
     "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "ioredis": "^5.3.2",
     "node-cache": "^5.1.2",
-    "redis": "^4.6.11"
+    "redis": "^4.6.11",
+    "request-ip": "^3.3.0"
   }
 }
